--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Szubienica</title>
 	
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext" rel="stylesheet"> 
+	<link rel="icon" href="icon/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<script src="szubienica.js"></script>
